[gd_scene load_steps=3 format=3 uid="uid://cowloviriv7pc"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_oj6b2"]
[ext_resource type="Texture2D" uid="uid://da3uawulivdj4" path="res://assets/sprites/computer/computer_base.png" id="1_sd4ir"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oj6b2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxMenu" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="GameLogo" type="TextureRect" parent="HBoxContainer/VBoxMenu"]
layout_mode = 2
texture = ExtResource("1_sd4ir")

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxMenu"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartGameButton" type="Button" parent="HBoxContainer/VBoxMenu/MenuOptions"]
layout_mode = 2
text = "Start game"

[node name="OptionsButton" type="Button" parent="HBoxContainer/VBoxMenu/MenuOptions"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="HBoxContainer/VBoxMenu/MenuOptions"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxMenu/MenuOptions"]
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="HBoxContainer/VBoxMenu"]
layout_mode = 2
size_flags_vertical = 10
text = "Version: 1.0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/VBoxMenu/MenuOptions/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxMenu/MenuOptions/QuitButton" to="." method="_on_quit_button_pressed"]
